# ECS_TK_IGH

ethercat_motor_control/: README.md
ethercat_motor_control/install/: local_setup.sh  setup.sh
ethercat_motor_control/install/dro_hg/include/dro_hg/dro_hg/msg/: arm_state.hpp  leg_state.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h
ethercat_motor_control/install/dro_hg/include/dro_hg/dro_hg/msg/detail/: arm_cmd__rosidl_typesupport_fastrtps_cpp.hpp  arm_cmd__struct.h  arm_cmd__traits.hpp  arm_state__functions.h  arm_state__rosidl_typesupport_introspection_c.h  arm_state__traits.hpp  leg_cmd__rosidl_typesupport_fastrtps_cpp.hpp  leg_cmd__type_support.cpp  leg_state__functions.c  leg_state__functions.h  leg_state__rosidl_typesupport_introspection_cpp.hpp  leg_state__struct.h  leg_state__type_support.h  leg_state__type_support.hpp  motor_cmd__struct.h  motor_cmd__traits.hpp  motor_state__builder.hpp  motor_state__functions.c  motor_state__rosidl_typesupport_introspection_c.h  motor_state__rosidl_typesupport_introspection_cpp.hpp  motor_state__struct.h  motor_state__struct.hpp  motor_state__type_support.cpp
ethercat_motor_control/install/dro_hg/local/lib/python3.10/dist-packages/dro_hg/: _dro_hg_s.ep.rosidl_typesupport_fastrtps_c.c
ethercat_motor_control/install/dro_hg/local/lib/python3.10/dist-packages/dro_hg-0.0.0-py3.10.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ethercat_motor_control/install/dro_hg/share/dro_hg/: local_setup.dsv  package.bash  package.dsv  package.sh
ethercat_motor_control/install/dro_hg/share/dro_hg/cmake/: dro_hgConfig.cmake  export_dro_hg__rosidl_generator_cExport.cmake  export_dro_hg__rosidl_generator_cppExport.cmake  export_dro_hg__rosidl_generator_pyExport-noconfig.cmake  export_dro_hg__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake
ethercat_motor_control/install/dro_hg/share/dro_hg/msg/: ArmState.idl  LegState.msg  MotorCmd.msg  MotorState.idl  MotorState.msg
ethercat_motor_control/install/ethercat_motor_node/lib/ethercat_motor_node/: ethercat_motor_node
ethercat_motor_control/install/ethercat_motor_node/share/ament_index/resource_index/parent_prefix_path/: ethercat_motor_node
ethercat_motor_control/install/ethercat_motor_node/share/ethercat_motor_node/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ethercat_motor_control/install/ethercat_motor_node/share/ethercat_motor_node/cmake/: ament_cmake_export_include_directories-extras.cmake  ethercat_motor_nodeConfig.cmake
ethercat_motor_control/log/: latest_build
ethercat_motor_control/scripts/: run_with_realtime.sh  single_publish.sh  single_publish_low_cmd.sh  velocity_publish.sh
ethercat_motor_control/src/dro_hg/: CMakeLists.txt
ethercat_motor_control/src/dro_hg/msg/: LegCmd.msg  MotorState.msg
ethercat_motor_control/src/ethercat_motor_node/: CMakeLists.txt  README.md
ethercat_motor_control/src/ethercat_motor_node/include/ethercat_motor_node/: config.h  main.h  math_ops.h  motor_control.h  servo_pdo_set.h
ethercat_motor_control/src/ethercat_motor_node/launch/: ethercat_motor.launch.py
ethercat_motor_control/src/ethercat_motor_node/src/: ethercat_motor_node.cpp  math_ops.c  motor_control.c  servo_pdo_set.c
ros2_ws/: cst_toggle.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/arm_control/include/arm_control/arm_control/msg/: low_cmd.hpp  low_state.hpp  motor_cmd.hpp  motor_state.hpp
ros2_ws/install/arm_control/include/arm_control/arm_control/msg/detail/: low_cmd__functions.h  low_cmd__rosidl_typesupport_introspection_cpp.hpp  low_cmd__struct.hpp  low_cmd__traits.hpp  (+19 more)
ros2_ws/install/arm_control/share/ament_index/resource_index/parent_prefix_path/: arm_control
ros2_ws/install/arm_control/share/arm_control/: local_setup.sh  package.sh
ros2_ws/install/arm_control/share/arm_control/cmake/: ament_cmake_export_dependencies-extras.cmake  arm_control__rosidl_typesupport_cppExport-noconfig.cmake  arm_control__rosidl_typesupport_introspection_cExport.cmake  arm_control__rosidl_typesupport_introspection_cppExport-noconfig.cmake  export_arm_control__rosidl_generator_cExport.cmake  export_arm_control__rosidl_generator_pyExport.cmake  export_arm_control__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_arm_control__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
ros2_ws/install/arm_control/share/arm_control/msg/: MotorCmd.idl  MotorState.idl
ros2_ws/install/dro_hg/include/dro_hg/dro_hg/msg/: arm_state.h  leg_cmd.hpp  low_cmd.h  low_state.h  motor_state.h  motor_state.hpp  rosidl_typesupport_introspection_c__visibility_control.h
ros2_ws/install/dro_hg/share/dro_hg/: local_setup.sh  package.ps1  package.sh  package.zsh
ros2_ws/install/dro_hg/share/dro_hg/cmake/: ament_cmake_export_dependencies-extras.cmake  dro_hg__rosidl_typesupport_introspection_cExport-noconfig.cmake  dro_hg__rosidl_typesupport_introspection_cExport.cmake  export_dro_hg__rosidl_generator_cExport-noconfig.cmake  export_dro_hg__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake
ros2_ws/install/dro_hg/share/dro_hg/msg/: ArmCmd.idl  LegCmd.idl  LowState.msg
ros2_ws/install/igh_ethercat/lib/igh_ethercat/: igh_ethercat_node
ros2_ws/install/igh_ethercat/share/ament_index/resource_index/package_run_dependencies/: igh_ethercat
ros2_ws/install/igh_ethercat/share/ament_index/resource_index/parent_prefix_path/: igh_ethercat
ros2_ws/install/igh_ethercat/share/igh_ethercat/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/igh_ethercat/: CMakeLists.txt
ros2_ws/src/igh_ethercat/src/: igh_ethercat_node.cpp  igh_example.c
(+56 files in other folders)
