<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ethercat_motor_node</name>
  <version>1.0.0</version>
  <description>EtherCAT 电机控制 ROS2 独立包：订阅 /low_cmd、发布 /low_state，含 math_ops、motor_control 与实时 EtherCAT 通信</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>dro_hg</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
